1st bacend programme

--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -55,7 +55,7 @@
 <body>
     <main>
         <h1>Log out</h1>
-        <h1><%= Email %></h1>
+        <h1><%= locals.Email %></h1>
         <form method="get" action="/logout">
             <input type="submit" value="Log Out">
         </form>
